--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -20,25 +20,13 @@
     padding: 0 20px;
   }
 
-  .visual2 .container .aboutWrap .about .topWrap p {
-    font-size: 14px;
+  .visual2 .container .aboutWrap {
+    padding: 60px 60px;
   }
 
   .visual3 .container ul li {
     width: calc(50% - 15px);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 50px;
-    height: 240px;
-  }
-
-  .visual3 .container ul li img {
-    transform: scale(1.5);
-  }
-
-  .visual3 .container ul li span {
-    margin-top: 0;
+    height: 260px;
   }
 
   .visual4 .projectSwiper {
@@ -50,65 +38,32 @@
   }
 }
 
-/* 화면 0 ~ 1164px */
-@media screen and (max-width:1164px) {
+/* 화면 0 ~ 1160px */
+@media screen and (max-width:1160px) {
   .visual2 .container .aboutWrap {
-    padding: 60px 80px;
+    flex-direction: column;
+    gap: 30px;
   }
-}
 
-/* 화면 0 ~ 1124px */
-@media screen and (max-width:1124px) {
-  .visual2 .container .aboutWrap {
-    padding: 60px 60px;
-  }
-}
-
-/* 화면 0 ~ 1084px */
-@media screen and (max-width:1084px) {
-  .visual2 .container .aboutWrap {
+  .visual2 .container .aboutWrap .leftWrap {
+    display: flex;
     flex-direction: column;
     align-items: center;
   }
 
-  .visual2 .container .aboutWrap .about .topWrap .name {
+  .visual2 .container .aboutWrap .leftWrap .greetings1 {
     text-align: center;
   }
 
-  .visual2 .container .aboutWrap .about .topWrap p {
+  .visual2 .container .aboutWrap .leftWrap .greetings2 {
     text-align: center;
   }
 
-  .visual2 .container .aboutWrap .about .botWrap {
-    display: flex;
-    gap: 40px;
-  }
-
-  .visual2 .container .aboutWrap .about .botWrap > div {
-    gap: 40px;
-  }
-
-  .visual2 .container .aboutWrap .about .botWrap .skillWrap {
-    margin-top: 28px;
-  }
-
-  .visual2 .container .aboutWrap .about .botWrap .skillWrap br {
-    display: block;
-  }
-
-  .visual2 .container .aboutWrap .about .botWrap .skillWrap .txt:nth-of-type(5),
-  .visual2 .container .aboutWrap .about .botWrap .skillWrap .txt:nth-of-type(6),
-  .visual2 .container .aboutWrap .about .botWrap .skillWrap .txt:nth-of-type(7) {
-    margin-top: 8px;
+  .visual2 .container .aboutWrap .rightWrap {
+    gap: 20px;
   }
 }
 
-/* 화면 0 ~ 1053px */
-@media screen and (max-width:1053px) {
-  .visual3 .container ul li p {
-    font-size: 14px;
-  }
-}
 
 /* 화면 0 ~ 1024px */
 @media screen and (max-width:1024px) {
@@ -152,25 +107,6 @@
   }
 }
 
-/* 화면 0 ~ 980px */
-@media screen and (max-width:980px) {
-  .visual3 .container ul li {
-    display: block;
-    height: 300px;
-  }
-
-  .visual3 .container ul li img {
-    transform: scale(1);
-  }
-  
-  .visual3 .container ul li span {
-    margin-top: 30px;
-  }
-
-  .visual3 .container ul li p {
-    font-size: 16px;
-  }
-} 
 
 /* 화면 0 ~ 927px */
 @media screen and (max-width:927px) {
@@ -186,21 +122,22 @@
   }
 }
 
-/* 화면 0 ~ 845px */
-@media screen and (max-width:845px) {
+/* 화면 0 ~ 830px */
+@media screen and (max-width:830px) {
   .visual3 .container ul li {
     width: 100%;
+    height: 200px;
+  }
+
+  .visual3 .container ul li .box {
     display: flex;
+    align-items: center;
     gap: 60px;
-    height: 240px;
   }
 
-  .visual3 .container ul li img {
+  .visual3 .container ul li .box img {
     transform: scale(1.5);
-  }
-
-  .visual3 .container ul li span {
-    margin-top: 0;
+    margin-bottom: 0;
   }
 }
 
@@ -223,37 +160,26 @@
   }
 }
 
-/* 화면 0 ~ 748px */
-@media screen and (max-width:748px) {
-  .visual2 .container .aboutWrap {
-    padding: 60px 30px;
+/* 화면 0 ~ 660px */
+@media screen and (max-width:660px) {
+  .visual2 .container .aboutWrap .leftWrap .greetings1 {
+    font-size: 24px;
   }
 
-  .visual2 .container .aboutWrap .about .topWrap p span {
-    display: block;
+  .visual2 .container .aboutWrap .leftWrap .greetings2 {
+    font-size: 14px;
   }
 
-  .visual2 .container .aboutWrap .about .topWrap p br {
-    display: none;
+  .visual2 .container .aboutWrap .leftWrap a {
+    font-size: 13px;
   }
 
-  .visual2 .about .botWrap .tit {
+  .visual2 .container .aboutWrap .rightWrap ul .tit {
     font-size: 18px;
   }
 
-  .visual2 .about .botWrap .txt {
+  .visual2 .container .aboutWrap .rightWrap ul .txt {
     font-size: 14px;
-  }
-}
-
-/* 화면 0 ~ 640px */
-@media screen and (max-width:640px) {
-  .visual2 .container .aboutWrap .about .topWrap p {
-    font-size: 12px;
-  }
-
-  .visual2 .about .botWrap .txt {
-    font-size: 12px;
   }
 }
 
@@ -275,14 +201,41 @@
   }
 }
 
-/* 화면 0 ~ 594px */
-@media screen and (max-width:594px) {
-  .visual2 .container .aboutWrap .about .botWrap > div {
-    gap: 20px;
+/* 화면 0 ~ 603px */
+@media screen and (max-width:603px) {
+  .visual2 .container .aboutWrap .rightWrap ul br {
+    display: block;
   }
 
-  .visual2 .container .aboutWrap .about .botWrap {
-    gap: 20px;
+  .visual2 .container .aboutWrap .rightWrap ul.skill .txt.mb10 {
+    margin-bottom: 10px;
+  }
+}
+
+/* 화면 0 ~ 600px */
+@media screen and (max-width:600px) {
+  .visual2 .container .aboutWrap {
+    padding: 60px 40px;
+  }
+
+  .visual2 .container .aboutWrap .leftWrap .greetings2 br {
+    display: none;
+  }
+}
+
+/* 화면 0 ~ 580px */
+@media screen and (max-width:580px) {
+  .visual3 .container ul li {
+    height: 260px;
+  }
+
+  .visual3 .container ul li .box {
+    display: block;
+  }
+
+  .visual3 .container ul li .box img {
+    margin-bottom: 30px;
+    transform: scale(1);
   }
 }
 
@@ -301,40 +254,10 @@
   }
 }
 
-/* 화면 0 ~ 554px */
-@media screen and (max-width:554px) {
-  .visual2 .container .aboutWrap .about .topWrap p {
-    font-size: 13px;
-  }
-
-  .visual2 .container .aboutWrap .about .botWrap {
-    flex-direction: column;
-  }
-
-  .visual2 .container .aboutWrap .about .botWrap > div {
-    gap: 80px;
-  }
-
-  .visual2 .about .botWrap .tit {
-    font-size: 20px;
-  }
-
-  .visual2 .about .botWrap .txt {
-    font-size: 14px;
-  }
-}
-
-/* 화면 0 ~ 550px */
-@media screen and (max-width:550px) {
-  .visual3 .container ul li p {
-    font-size: 14px;
-  }
-}
-
-/* 화면 0 ~ 513px */
-@media screen and (max-width:513px) {
-  .visual3 .container ul li p {
-    font-size: 13px;
+/* 화면 0 ~ 547px */
+@media screen and (max-width:547px) {
+  .visual2 .container .aboutWrap .rightWrap ul.license .txt.mb10 {
+    margin-bottom: 10px;
   }
 }
 
@@ -363,26 +286,13 @@
     margin-bottom: 30px;
     line-height: 40px;
   }
-
-  .visual2 .container .aboutWrap .about .topWrap p {
-    font-size: 11px;
+  
+  .visual2 {
+    padding: 70px 0;
   }
 
-  .visual3 .container ul li {
-    display: block;
-    height: 300px;
-  }
-
-  .visual3 .container ul li img {
-    transform: scale(1);
-  }
-
-  .visual3 .container ul li span {
-    margin-top: 30px;
-  }
-
-  .visual3 .container ul li p {
-    font-size: 15px;
+  .visual2 .container .aboutWrap .rightWrap ul.education .txt.mb10 {
+    margin-bottom: 10px;
   }
 
   .visual4 .projectSwiper {
