--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ button.topBtnFix:hover {
 /* 섹션 스크롤 애니메이션 */
 section:not(.visual1) .container {
   opacity: 0;
-  transform: translateY(100px);
+  transform: translateY(160px);
   transition: all 0.8s ease;
 }
 
@@ -319,23 +319,6 @@ section:not(.visual1).active .container {
   margin-bottom: 60px;
 }
 
-.visual2 .about .botWrap .tit {
-  font-size: 20px;
-  font-weight: 700;
-  color: #EAD620;
-  margin-bottom: 20px;
-}
-
-.visual2 .about .botWrap .txt {
-  font-size: 16px;
-  font-weight: 400;
-  margin-bottom: 18px;
-}
-
-.visual2 .about .botWrap .txt.mb0 {
-  margin-bottom: 0;
-}
-
 /* 비주얼2 */
 .visual2 {
   padding: 140px 0 70px;
@@ -345,80 +328,89 @@ section:not(.visual1).active .container {
 
 .visual2 .container .aboutWrap {
   display: flex;
-  gap: 30px;
-  padding: 60px 100px;
+  justify-content: space-between;
+  padding: 60px 90px;
   border: 1px solid rgba(255, 255, 255, 0.2);
 }
 
-.visual2 .container .aboutWrap img {
-  width: 360px;
-  height: 440px;
-}
-
-.visual2 .container .aboutWrap .about .topWrap .name {
-  display: block;
-  font-size: 32px;
+.visual2 .container .aboutWrap .leftWrap .greetings1 {
+  font-size: 26px;
   font-weight: 500;
   line-height: 36px;
-  margin-bottom: 16px;
+  margin-bottom: 20px;
 }
 
-.visual2 .container .aboutWrap .about .topWrap p {
+.visual2 .container .aboutWrap .leftWrap .greetings2 {
   font-size: 16px;
   font-weight: 400;
-  line-height: 26px;
-  padding-bottom: 16px;
-  border-bottom: 1px dashed #fff;
+  line-height: 30px;
+  padding-top: 20px;
+  margin-bottom: 25px;
+  border-top: 1px dashed rgba(255, 255, 255, 0.5);
 }
 
-.visual2 .container .aboutWrap .about .botWrap > div {
+.visual2 .container .aboutWrap .leftWrap a {
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 400;
+  padding: 10px 30px;
+  border: 1px solid #fff;
+  border-radius: 25px;
+  transition: background-color 0.5s ease, color 0.5s ease;
+}
+
+.visual2 .container .aboutWrap .leftWrap a:hover {
+  background-color: rgba(255, 255, 255, 0.8);
+  color: #000;
+  border: 1px solid #fff;
+}
+
+.visual2 .container .aboutWrap .rightWrap {
   display: flex;
-  gap: 100px;
-  margin-top: 28px;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.visual2 .container .aboutWrap .about .botWrap .skillWrap {
-  margin-top: 48px;
-  font-size: 0;
+.visual2 .container .aboutWrap .rightWrap ul {
+  position: relative;
+  padding: 20px;
+  border: 1px solid rgba(255, 255, 255, 0.5);
 }
 
-.visual2 .container .aboutWrap .about .botWrap .skillWrap br {
+.visual2 .container .aboutWrap .rightWrap ul::before {
+  position: absolute;
+  top: 50%;
+  left: -30px;
+  transform: translateY(-50%);
+  content: '';
+  display: block;
+  width: 20px;
+  height: 15px;
+  background: url(../img/icon_check.svg) no-repeat;
+}
+
+.visual2 .container .aboutWrap .rightWrap ul .tit {
+  font-size: 20px;
+  font-weight: 700;
+  color: #EAD620;
+  margin-bottom: 15px;
+}
+
+.visual2 .container .aboutWrap .rightWrap ul .txt {
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 400;
+  margin-right: 20px;
+}
+
+.visual2 .container .aboutWrap .rightWrap ul .txt.mr0 {
+  margin-right: 0;
+}
+
+.visual2 .container .aboutWrap .rightWrap ul br {
   display: none;
 }
 
-.visual2 .container .aboutWrap .about .botWrap .skillWrap .tit {
-  display: block;
-}
-
-.visual2 .container .aboutWrap .about .botWrap .skillWrap .txt {
-  display: inline-block;
-  margin-bottom: 0;
-  padding: 6px 12px;
-  border-radius: 50px;
-  background: #F85A00;
-  margin-right: 8px;
-}
-
-.visual2 .container .aboutWrap .about .botWrap .skillWrap .txt:nth-of-type(3){
-  background: #427AD4;
-}
-
-.visual2 .container .aboutWrap .about .botWrap .skillWrap .txt:nth-of-type(4){
-  background: #F2D809;
-}
-
-.visual2 .container .aboutWrap .about .botWrap .skillWrap .txt:nth-of-type(5){
-  background: #0868AB;
-}
-
-.visual2 .container .aboutWrap .about .botWrap .skillWrap .txt:nth-of-type(6){
-  background: #FFFFFF;
-  color: #000;
-}
-
-.visual2 .container .aboutWrap .about .botWrap .skillWrap .txt:nth-of-type(7){
-  background: #A258FF;
-}
 
 /* 비주얼3 */
 .visual3 {
@@ -432,38 +424,40 @@ section:not(.visual1).active .container {
   gap: 30px;
 }
 
-.visual3 .container ul img {
-  width: fit-content;
-  height: fit-content;
-}
-
 .visual3 .container ul li {
   width: 380px;
   height: 300px;
-  background: #DBDBDB;
-  padding: 50px 43px;
+  background-color: #DBDBDB;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.visual3 .container ul li span {
+.visual3 .container ul li .box img {
+  width: 50px;
+  height: 40px;
+  margin-bottom: 30px;
+}
+
+.visual3 .container ul li .box span {
   display: block;
   font-size: 18px;
   font-weight: 500;
   color: #333;
-  margin-top: 30px;
+  margin-bottom: 15px;
 }
 
-.visual3 .container ul li p {
+.visual3 .container ul li .box p {
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
   color: #1A1A1A;
-  margin-top: 15px;
 }
 
 /* 비주얼4 */
 .visual4 {
   background: #0D0D0D;
-  padding-top: 70px;
+  padding: 70px 0;
 }
 
 .visual4 .swiperWrap {
@@ -480,11 +474,11 @@ section:not(.visual1).active .container {
   position: relative;
   width: 340px;
   height: 300px;
-  background: #fff url(../img/logo_cgv.svg) no-repeat center;
+  background: #fff url(../img/logo_seoulMilk.svg) no-repeat center;
 }
 
 .visual4 .projectSwiper .swiper-wrapper .swiper-slide.slide2 {
-  background: #fff url(../img/logo_hanwha.svg) no-repeat center;
+  background: #fff url(../img/logo_hollys.svg) no-repeat center;
 }
 
 .visual4 .projectSwiper .swiper-wrapper .swiper-slide.slide3 {
@@ -492,11 +486,11 @@ section:not(.visual1).active .container {
 }
 
 .visual4 .projectSwiper .swiper-wrapper .swiper-slide.slide4 {
-  background: #fff url(../img/logo_hollys.svg) no-repeat center;
+  background: #fff url(../img/logo_hanwha.svg) no-repeat center;
 }
 
 .visual4 .projectSwiper .swiper-wrapper .swiper-slide.slide5 {
-  background: #fff url(../img/logo_seoulMilk.svg) no-repeat center;
+  background: #fff url(../img/logo_cgv.svg) no-repeat center;
 }
 
 .visual4 .projectSwiper .swiper-wrapper .swiper-slide::after {
@@ -655,7 +649,7 @@ section:not(.visual1).active .container {
 .visual5 .container p {
   font-size: 18px;
   font-weight: 400;
-  line-height: 28px;
+  line-height: 34px;
   text-align: center;
   margin-bottom: 15px;
 }
